# UpsilonGC

./: .gitignore  CMakeLists.txt  CoreCLR.ZeroGC.sln  README.md
ZeroGC/: ZeroGC.cpp  ZeroGC.vcxproj  ZeroGCHandleManager.cpp  ZeroGCHandleStore.cpp  ZeroGCHeap.cpp
ZeroGC/inc/: ZeroGCHandleManager.h  ZeroGCHandleStore.h  ZeroGCHeap.h  appdomain.h  common.h  gcinterface.h  methodtable.h  threads.h
src/: CMakeLists.txt  CoreCLR.ZeroGC.sln
src/Samples.ConsoleApp/: ConsoleApp.csproj  Program.cs
src/Samples.ConsoleApp/Properties/: launchSettings.json
src/Samples.ConsoleApp/Properties/PublishProfiles/: FolderProfile.pubxml
src/Samples.WebApi/: Program.cs  Startup.cs  WebApi.csproj
src/Samples.WebApi/Controllers/: ValuesController.cs
src/Samples.WebApi/Properties/: launchSettings.json
src/UpsilonGC/: CMakeLists.txt  UpsilonGC.cpp  UpsilonGC.vcxproj  UpsilonGC.vcxproj.filters  UpsilonGCHandleManager.cpp  UpsilonGCHandleStore.cpp  UpsilonGCHeap.cpp  gcdesc.h  stdafx.h
src/UpsilonGC/inc/: UpsilonGCHandleManager.h  UpsilonGCHandleStore.h  UpsilonGCHeap.h
src/ZeroGC.BumpPointer/: CustomGC.vcxproj.filters  ZeroGC.BumpPointer.vcxproj  ZeroGC.cpp  ZeroGCHandleStore.cpp  ZeroGCHeap.cpp
src/ZeroGC.BumpPointer/inc/: ZeroGCHeap.h
src/ZeroGC.Calloc/: ZeroGC.Calloc.vcxproj  ZeroGC.cpp  ZeroGCHeap.cpp
src/ZeroGC.Calloc/inc/: ZeroGCHeap.h
